# Minecraft-Server-Launcher

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
src/: main.cpp
src/Server/Config/: ServerConfigurator.h
src/Server/Downloader/: ServerDownloader.cpp  ServerDownloader.h
src/Server/Launcher/: ServerLauncher.cpp  ServerLauncher.h
